fix(jdk18): remove higher java idioms